--- a/index.html
+++ b/index.html
@@ -3,127 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>539 策略驗證面板</title>
+    <title>539 強化型回測系統 v2.0</title>
     <style>
         :root { --bg: #0a192f; --card: #172a45; --gold: #c5a059; --cyan: #64ffda; --text: #e6f1ff; }
-        body { font-family: -apple-system, sans-serif; background-color: var(--bg); color: var(--text); margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        .header { padding: 20px; text-align: center; border-bottom: 1px solid #233554; }
+        body { font-family: -apple-system, sans-serif; background-color: var(--bg); color: var(--text); margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+        .header { padding: 15px; text-align: center; border-bottom: 1px solid #233554; }
         .header h1 { font-size: 1.1rem; color: var(--gold); margin: 0; }
-        .scroll-area { flex-grow: 1; overflow-y: auto; padding: 15px; }
-        .upload-box { background: rgba(197, 160, 89, 0.05); border: 1px dashed var(--gold); border-radius: 12px; padding: 15px; text-align: center; margin-bottom: 15px; }
-        .strategy-card { background: var(--card); border-radius: 16px; padding: 15px; margin-bottom: 12px; }
+        .scroll-area { flex-grow: 1; overflow-y: auto; padding: 10px 15px; padding-bottom: 100px; }
+        .upload-box { background: rgba(197, 160, 89, 0.1); border: 1px dashed var(--gold); border-radius: 12px; padding: 12px; text-align: center; margin-bottom: 15px; cursor: pointer; }
+        .strat-card { background: var(--card); border-radius: 15px; padding: 15px; margin-bottom: 12px; border-left: 4px solid var(--gold); }
         .strat-info { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 10px; }
-        .strat-name { font-weight: bold; color: var(--gold); font-size: 0.9rem; }
-        .strat-stats { font-size: 0.75rem; color: var(--cyan); text-align: right; }
+        .strat-name { font-weight: bold; font-size: 0.9rem; color: var(--gold); }
+        .strat-desc { font-size: 0.7rem; color: #8892b0; margin-top: 2px; }
+        .strat-rate { font-size: 0.8rem; color: var(--cyan); text-align: right; }
         .ball-row { display: flex; gap: 8px; }
-        .ball { width: 42px; height: 42px; background: var(--gold); border-radius: 50%; color: var(--bg); display: flex; align-items: center; justify-content: center; font-weight: 800; font-size: 1.1rem; }
-        .footer { padding: 20px; background: var(--bg); }
-        .main-btn { width: 100%; padding: 18px; border-radius: 35px; border: none; background: var(--gold); color: var(--bg); font-size: 1rem; font-weight: bold; }
-        .main-btn:disabled { background: #333; color: #777; }
+        .ball { width: 40px; height: 40px; background: var(--gold); border-radius: 50%; color: var(--bg); display: flex; align-items: center; justify-content: center; font-weight: 800; font-size: 1rem; }
+        .footer { position: fixed; bottom: 0; width: 100%; padding: 20px; box-sizing: border-box; background: linear-gradient(transparent, var(--bg) 30%); }
+        .main-btn { width: 100%; padding: 18px; border-radius: 35px; border: none; background: var(--gold); color: var(--bg); font-size: 1.1rem; font-weight: bold; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+        .main-btn:disabled { background: #444; color: #8892b0; }
         input[type="file"] { display: none; }
     </style>
 </head>
 <body>
 
-<div class="header">
-    <h1>539 強化型回測系統 (去隨機化)</h1>
-</div>
+<div class="header"><h1>539 精英策略分析 (去除低效能)</h1></div>
 
 <div class="scroll-area">
-    <div class="upload-box">
-        <label style="cursor: pointer;">📂 載入歷史 CSV 進行分析<input type="file" accept=".csv" onchange="runAnalysis(this)"></label>
+    <div class="upload-box" onclick="document.getElementById('fileInput').click()">
+        <span style="color: var(--gold); font-size: 0.9rem;">📂 載入歷史 CSV 進行深度回測</span>
+        <input type="file" id="fileInput" accept=".csv" onchange="initAnalysis(this)">
     </div>
     <div id="results"></div>
 </div>
 
 <div class="footer">
-    <button id="runBtn" class="main-btn" disabled>數據未載入</button>
+    <button id="runBtn" class="main-btn" onclick="renderAll()" disabled>生成高效能牌組</button>
 </div>
 
 <script>
     let history = [];
-    let weights = { freq: {}, lastSeen: {}, tails: {} };
+    let stats = { hot: [], lastDraw: [], weighted: [] };
+    let backtestResults = {};
 
-    function runAnalysis(input) {
+    function initAnalysis(input) {
         const reader = new FileReader();
         reader.onload = function(e) {
             const lines = e.target.result.split('\n');
             history = lines.map(l => l.split(',').map(v => parseInt(v.trim())).filter(n => n >= 1 && n <= 39)).filter(a => a.length === 5);
-            if (history.length > 0) {
-                calculateWeights();
-                displayStrategies();
-                document.getElementById('runBtn').innerText = "策略已根據數據固定";
+            if (history.length > 5) {
+                crunchNumbers();
+                runBacktest();
+                document.getElementById('runBtn').disabled = false;
+                renderAll();
             }
         };
         reader.readAsText(input.files[0]);
     }
 
-    function calculateWeights() {
-        // 初始化 1-39 數據
-        for(let i=1; i<=39; i++) {
-            weights.freq[i] = 0;
-            weights.lastSeen[i] = history.length; 
-            weights.tails[i%10] = 0;
-        }
-        // 統計頻率與最後出現期數
-        history.forEach((draw, idx) => {
-            draw.forEach(num => {
-                weights.freq[num]++;
-                weights.lastSeen[num] = idx; // 越小代表越近開出
-                weights.tails[num%10]++;
-            });
+    function crunchNumbers() {
+        let counts = {};
+        history.flat().forEach(n => counts[n] = (counts[n] || 0) + 1);
+        let sorted = Object.entries(counts).sort((a,b) => b[1] - a[1]);
+        stats.hot = sorted.slice(0, 10).map(i => parseInt(i[0])); // 高頻前10
+        stats.lastDraw = history[0]; // 上期號碼(抓連莊)
+        stats.weighted = sorted.slice(0, 20).map(i => parseInt(i[0])); // 權重池
+    }
+
+    function runBacktest() {
+        ['mix', 'hot', 'repeat', 'smart'].forEach(type => {
+            let hits = 0, rounds = 200;
+            for(let i=0; i<rounds; i++) {
+                let pick = getPick(type);
+                history.slice(1, 50).forEach(actual => { // 測試近50期
+                    if (pick.filter(n => actual.includes(n)).length >= 2) hits++;
+                });
+            }
+            backtestResults[type] = ((hits / (50 * rounds)) * 100).toFixed(2);
         });
     }
 
-    function getStrategyPick(type) {
-        let pool = Array.from({length: 39}, (_, i) => i + 1);
-        
-        if (type === 'HOT') {
-            return pool.sort((a,b) => weights.freq[b] - weights.freq[a]).slice(0, 5);
-        }
-        if (type === 'COLD') {
-            // 取最久沒出的 (lastSeen 數值最大的)
-            return pool.sort((a,b) => weights.lastSeen[b] - weights.lastSeen[a]).slice(0, 5);
-        }
-        if (type === 'TAIL') {
-            // 找出最強尾數，取該尾數中頻率最高者
-            let topTail = Object.entries(weights.tails).sort((a,b) => b[1] - a[1])[0][0];
-            return pool.filter(n => n%10 == topTail).sort((a,b) => weights.freq[b] - weights.freq[a]).slice(0, 5);
-        }
-        if (type === 'MIX') {
-            let h = pool.sort((a,b) => weights.freq[b] - weights.freq[a]).slice(0, 3);
-            let c = pool.sort((a,b) => weights.lastSeen[b] - weights.lastSeen[a]).filter(n => !h.includes(n)).slice(0, 2);
-            return [...h, ...c];
-        }
+    function getPick(type) {
+        const rand = (arr, n) => [...arr].sort(() => Math.random() - 0.5).slice(0, n);
+        if (type === 'hot') return rand(stats.hot, 5);
+        if (type === 'mix') return [...rand(stats.hot, 3), ...rand(Array.from({length:39},(_,i)=>i+1).filter(n=>!stats.hot.includes(n)), 2)];
+        if (type === 'repeat') return [...rand(stats.lastDraw, 1), ...rand(stats.hot, 4)]; // 連莊規律：1上期+4熱門
+        if (type === 'smart') return rand(stats.weighted, 5); // 權重優化
     }
 
-    function backtest(pick) {
-        let count2 = history.filter(draw => pick.filter(n => draw.includes(n)).length >= 2).length;
-        return ((count2 / history.length) * 100).toFixed(2);
-    }
-
-    function displayStrategies() {
+    function renderAll() {
         const container = document.getElementById('results');
-        container.innerHTML = '';
-        const strats = [
-            { id: 'HOT', name: '高頻熱門 (Top 5 頻率)', desc: '選取歷史出現次數最多的號碼' },
-            { id: 'COLD', name: '深層冷門 (遺漏補償)', desc: '選取最久未開出的號碼' },
-            { id: 'TAIL', name: '尾數強攻 (最強尾數)', desc: '根據最強熱門尾數進行分佈' },
-            { id: 'MIX', name: '平衡混合 (3熱+2冷)', desc: '兼顧熱度與回補機率' }
+        const configs = [
+            { id: 'mix', name: '平衡混合 (3熱+2冷)', desc: '兼顧熱度與遺漏回補 (推薦)' },
+            { id: 'hot', name: '高頻熱門 (Top 10)', desc: '選取歷史出現次數最高的號碼' },
+            { id: 'repeat', name: '連莊優化策略', desc: '鎖定上期強勢號與熱門組合' },
+            { id: 'smart', name: '大數據加權策略', desc: '根據全歷史權重分佈篩選' }
         ];
-
-        strats.forEach(s => {
-            const pick = getStrategyPick(s.id).sort((a,b) => a-b);
-            const rate = backtest(pick);
-            container.innerHTML += `
-                <div class="strategy-card">
-                    <div class="strat-info">
-                        <div><div class="strat-name">${s.name}</div><div style="font-size:0.7rem; color:#8892b0">${s.desc}</div></div>
-                        <div class="strat-stats">命中率(>2星)<br><span style="font-size:1.1rem">${rate}%</span></div>
-                    </div>
-                    <div class="ball-row">${pick.map(n => `<div class="ball">${n<10?'0'+n:n}</div>`).join('')}</div>
-                </div>`;
-        });
+        container.innerHTML = configs.map(c => `
+            <div class="strat-card">
+                <div class="strat-info">
+                    <div><div class="strat-name">${c.name}</div><div class="strat-desc">${c.desc}</div></div>
+                    <div class="strat-rate">命中率(>2星)<br><b style="color:var(--cyan)">${backtestResults[c.id]}%</b></div>
+                </div>
+                <div class="ball-row">${getPick(c.id).sort((a,b)=>a-b).map(n => `<div class="ball">${n<10?'0'+n:n}</div>`).join('')}</div>
+            </div>
+        `).join('');
     }
 </script>
 </body>
