--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>預測模擬系統 - 強勢策略版</title>
+<title>預測模擬系統 - 強化版</title>
 <style>
 body { margin:0; font-family:-apple-system,BlinkMacSystemFont; background:#0f1a2b; color:#fff;}
 .panel { padding:16px; border-bottom:1px solid #24324a; }
@@ -11,10 +11,10 @@ h2 { margin:0 0 12px 0; font-size:18px; }
 button, select, input { width:100%; padding:14px; font-size:16px; margin-top:8px; border-radius:10px; border:none; }
 button { background:#1e3a5f; color:#fff; }
 .log-item { background:#16253d; padding:12px; border-radius:10px; margin-bottom:10px; }
+.log-item.best { border:2px solid #00ff99; }
 .small { font-size:13px; opacity:0.8; }
 </style>
 </head>
-
 <body>
 
 <!-- Panel 1 -->
@@ -45,55 +45,52 @@ button { background:#1e3a5f; color:#fff; }
   <div id="liveResult"></div>
 </div>
 
-<!-- Panel 5: 優化參數 -->
+<!-- Panel 5 -->
 <div class="panel">
-  <h2>Panel 5｜策略參數優化</h2>
+  <h2>Panel 5｜策略參數優化 & 自動套用最佳 N</h2>
   <select id="optStrategySelect"></select>
   <button onclick="optimizeParams()">測試不同 N</button>
   <div id="optResult"></div>
 </div>
 
 <script>
-let data = []
-let logs = {}
+let data=[]
+let logs={}
+let bestParams={} // 儲存最佳 N
 
-// ===== 新策略定義 =====
+// ===== 策略定義 =====
 const strategies = {
   weightedHot: {
-    name: "熱號加權策略",
-    description: "取過去15期熱號加權，選前5高權重號碼",
-    params: {N:15},
-    predict(history, params={N:15}) {
-      const recent = history.slice(-params.N)
-      return pickTopWeighted(recent,5)
-    }
+    name:"熱號加權策略",
+    description:"取過去 N 期熱號加權，選前5高權重號碼",
+    params:{N:15},
+    predict(history, params={N:15}) { return pickTopWeighted(history.slice(-params.N),5) }
   },
   hotColdMix: {
-    name: "冷熱混合策略",
-    description: "取最近10期熱號前3 + 過去20期冷號2，組合成5個號碼",
-    params: {hotN:10, coldN:20},
+    name:"冷熱混合策略",
+    description:"取最近 hotN 期熱號前3 + 過去 coldN 期冷號2，組合5個號碼",
+    params:{hotN:10,coldN:20},
     predict(history, params={hotN:10,coldN:20}) {
-      const hot = pickTopWeighted(history.slice(-params.hotN),3)
-      const cold = pickTopWeighted(history.slice(-params.coldN),2,true)
+      const hot=pickTopWeighted(history.slice(-params.hotN),3)
+      const cold=pickTopWeighted(history.slice(-params.coldN),2,true)
       return [...hot,...cold]
     }
   }
 }
 
 // ===== CSV 讀取 =====
-document.getElementById("csvInput").addEventListener("change", e=>{
+document.getElementById("csvInput").addEventListener("change",e=>{
   const file=e.target.files[0]
   if(!file) return
   const reader=new FileReader()
   reader.onload=()=>parseCSV(reader.result)
   reader.readAsText(file)
 })
-
 function parseCSV(text){
   const rows=text.trim().split("\n")
-  data = rows.slice(1).map(r=>{
+  data=rows.slice(1).map(r=>{
     const [date,...nums]=r.split(",")
-    return {date, numbers:nums.map(n=>parseInt(n,10))}
+    return {date,numbers:nums.map(n=>parseInt(n,10))}
   })
 }
 
@@ -108,7 +105,7 @@ function runBacktest(){
     for(const key in strategies){
       const predicted=strategies[key].predict(history,strategies[key].params)
       const hit=predicted.filter(n=>actual.includes(n)).length
-      logs[key].push({date, actual, predicted, hit})
+      logs[key].push({date,actual,predicted,hit})
     }
   }
   populateSelects()
@@ -162,6 +159,7 @@ function runLivePrediction(){
       <div>策略：${strategy.name}</div>
       <div class="small">資料：${history[0].date} ～ ${history[history.length-1].date}</div>
       <div>預測號碼：<strong>${predicted.join(" ")}</strong></div>
+      <div class="small">套用最佳 N: ${JSON.stringify(bestParams[key]||{})}</div>
     </div>
   `
 }
@@ -171,6 +169,7 @@ function optimizeParams(){
   const key=document.getElementById("optStrategySelect").value
   const strategy=strategies[key]
   const Nvalues=[5,6,7,8,9,10,11,12,13,14,15]
+  let bestRate=0, bestN=0
   let resultHTML=''
   Nvalues.forEach(N=>{
     if(strategy.name==="熱號加權策略") strategy.params.N=N
@@ -179,8 +178,10 @@ function optimizeParams(){
     const log=logs[key].slice(-10)
     const twoStar=log.filter(r=>r.hit>=2).length
     const rate=log.length?((twoStar/log.length)*100).toFixed(1):0
-    resultHTML+=`<div class="log-item">N=${N} → 2星命中率: ${rate}%</div>`
+    if(rate>bestRate){ bestRate=rate; bestN=N }
+    resultHTML+=`<div class="log-item ${rate==bestRate?'best':''}">N=${N} → 2星命中率: ${rate}%</div>`
   })
+  bestParams[key]=strategy.name==="熱號加權策略"?{N:bestN}:{hotN:bestN}
   document.getElementById("optResult").innerHTML=resultHTML
 }
 
@@ -200,7 +201,7 @@ function populateSelects(){
 }
 
 // ===== 工具 =====
-function pickTopWeighted(history, count, reverse=false){
+function pickTopWeighted(history,count,reverse=false){
   const freq={}
   history.forEach(d=>d.numbers.forEach(n=>freq[n]=(freq[n]||0)+1))
   return Object.keys(freq)
